# coralnpu-compiler

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  extensions.bzl  iree-v3.10.0-0001-Bazel-fix-bazel-when-used-as-submodule.patch  iree-v3.10.0-0001-bazel-fix-bazel-when-used-as-submodule.patch  iree-v3.10.0-0001-fix-iree-compile-for-jax-when-used-as-submodule.patch  iree-v3.10.0-0002-Bazel-add-support-for-out-of-tree-plugins.patch  iree-v3.10.0-0003-fix-iree-compile-for-jax-when-used-as-submodule.patch  iree-v3.10.0-0004-Bazel-add-support-for-out-of-tree-drivers.patch  iree-v3.10.0-0005-Flow-propagate-the-stream.affinity-to-the-parent-dis.patch  iree-v3.10.0-0006-Utils-fix-serializeBitIntegerValuesAsBytes.patch  iree-v3.10.0-0007-bazel-add-python-binding-support.patch  iree-v3.10.0-0008-passes-copy-attributes.patch  iree_compiler_plugin.cmake  iree_runtime_plugin.cmake  llvm-project-0001-fix-for-jax-when-used-as-submodule.patch  llvm-project-0002-bazel-for-python-bindings.patch  llvm-project-0003-passes-copy-attributes.patch  pyproject.toml  requirements.txt  requirements_lock.txt
build_tools/bazel/: BUILD.bazel  bytecode_module.bzl  create_wheel.py  extensions.bzl  install.sh  multi_platform.bzl  rv32_toolchain.BUILD
build_tools/bazel/python_packages/coralnpu_compiler/: BUILD.bazel
build_tools/bazel/python_packages/coralnpu_runtime/: BUILD.bazel
build_tools/cmake/: ManageRV32Toolchain.cmake  iree_compiler_plugin.cmake  iree_runtime_plugin.cmake
compiler/: BUILD.bazel  CMakeLists.txt  PluginRegistration.cpp
compiler/Pipelines/: BUILD.bazel  CMakeLists.txt  Pipelines.cpp  Pipelines.h
compiler/Transforms/: BUILD.bazel  CMakeLists.txt  CoralNPUAffinityAnnotation.cpp  CoralNPUDumpAffinityExecutionProfile.cpp  CoralNPUTileSizeSelection.cpp  Passes.cpp  Passes.h  Passes.td
compiler/tools/: BUILD.bazel  CMakeLists.txt  coralnpu-compile-main.cc  coralnpu_compile_lib.cc  coralnpu_compile_lib.h
crt/: BUILD.bazel  CMakeLists.txt  coralnpu_dispatch.h  coralnpu_main.c  coralnpu_start.S  riscv32-toolchain.cmake
docs/design/: tiling_levels_explained.md
examples/gemma3-jax-aot/: BUILD.bazel  chat_cpu.py  chat_cpu_split.py  export_gemma.py  export_gemma_split.py  test_chat_cpu.sh  test_chat_cpu_split.sh
examples/mobilenetv2-jax-aot/: BUILD.bazel  classify.py  export_mobilenet.py  test_classify.sh
pjrt_plugin/: BUILD.bazel  CMakeLists.txt  client.cc  client.h  dylib_entry_point.cc
runtime/: BUILD.bazel  CMakeLists.txt
runtime/driver/: BUILD.bazel  CMakeLists.txt  coralnpu_command_buffer.c  coralnpu_command_buffer.h  coralnpu_device.c  coralnpu_device.h  coralnpu_driver.c  coralnpu_driver.h  coralnpu_event.c  coralnpu_event.h  coralnpu_executable.c  coralnpu_executable.h  coralnpu_executable_cache.c  coralnpu_executable_cache.h  coralnpu_semaphore.c  coralnpu_semaphore.h
runtime/driver/registration/: BUILD.bazel  CMakeLists.txt  driver_module.c  driver_module.h
runtime/sim/: BUILD.bazel  CMakeLists.txt  simulator_api.h  simulator_elf_loader.c  simulator_elf_loader.h  simulator_executable.c  simulator_executable.h  simulator_format.h  simulator_inline.c  simulator_inline.h  simulator_mpact.cpp
scripts/: build-test-coralnpu-jax.sh  build-test-coralnpu-plugins.sh  format-code.sh  jax_test.py  patch-third_party.sh  test.mlir
tests/: BUILD.bazel  CMakeLists.txt  defs.bzl  defs.cmake  test-coralnpu-aoc.sh
tests/models/: CMakeLists.txt
tests/models/linalg/: BUILD.bazel  abs_f32.mlir  add_f32.mlir  add_i16.mlir  add_i32.mlir  add_i8.mlir  batch_matmul_f32.mlir  batch_matmul_i16.mlir  batch_matmul_i32.mlir  batch_matmul_i8.mlir  batch_matvec_f32.mlir  batch_matvec_i16.mlir  batch_matvec_i32.mlir  batch_matvec_i8.mlir  batch_mmt4d_f32.mlir  batch_mmt4d_i16.mlir  batch_mmt4d_i32.mlir  batch_mmt4d_i8.mlir  batch_reduce_matmul_f32.mlir  batch_reduce_matmul_i16.mlir  batch_reduce_matmul_i32.mlir  batch_reduce_matmul_i8.mlir  batch_vecmat_f32.mlir  batch_vecmat_i16.mlir  batch_vecmat_i32.mlir  batch_vecmat_i8.mlir  broadcast_dim1_f32.mlir  broadcast_dim1_i16.mlir  broadcast_dim1_i32.mlir  broadcast_dim1_i8.mlir  broadcast_f32.mlir  broadcast_i16.mlir  broadcast_i32.mlir  broadcast_i8.mlir  ceil_f32.mlir  contract_matmul_f32.mlir  contract_matmul_i16.mlir  contract_matmul_i32.mlir  contract_matmul_i8.mlir  conv_1d_f32.mlir  (+352 more)
tests/models/stablehlo/: BUILD.bazel  CMakeLists.txt  abs_rank1_f32.mlir  abs_rank1_i16.mlir  abs_rank1_i32.mlir  abs_rank1_i8.mlir  abs_rank2_f32.mlir  abs_rank2_i16.mlir  abs_rank2_i32.mlir  abs_rank2_i8.mlir  abs_rank3_f32.mlir  abs_rank3_i16.mlir  abs_rank3_i32.mlir  abs_rank3_i8.mlir  abs_rank4_f32.mlir  abs_rank4_i16.mlir  abs_rank4_i32.mlir  abs_rank4_i8.mlir  add.mlir  add_rank1_f32.mlir  add_rank1_i16.mlir  add_rank1_i32.mlir  add_rank1_i8.mlir  add_rank2_f32.mlir  add_rank2_i16.mlir  add_rank2_i32.mlir  add_rank2_i8.mlir  add_rank3_f32.mlir  add_rank3_i16.mlir  add_rank3_i32.mlir  add_rank3_i8.mlir  add_rank4_f32.mlir  add_rank4_i16.mlir  add_rank4_i32.mlir  add_rank4_i8.mlir  and_rank1_i16.mlir  and_rank1_i32.mlir  and_rank1_i8.mlir  and_rank2_i16.mlir  and_rank2_i32.mlir  (+499 more)
tests/python-bindings/: BUILD.bazel  import_test.py
tests/transforms/: BUILD.bazel  CMakeLists.txt  dump_affinity_execution_profile.mlir  dump_affinity_execution_profile_empty.mlir  lit.cfg.py
toolchain/: cc_toolchain_config.bzl
tools/: CMakeLists.txt
tools/check_gen/: BUILD.bazel  CMakeLists.txt  CheckTestGenerator.cpp  CheckTestGenerator.h  CompileUtils.cpp  CompileUtils.h  ParseUtils.cpp  ParseUtils.h  PrecompiledBinary.cpp  PrecompiledBinary.h  README.md  def.bzl  def.cmake  main.cpp
tools/check_gen/examples/: BUILD.bazel  fill_rank_2_f32.mlir  test_fill.mlir  test_float.mlir
tools/check_gen/generators/: BUILD.bazel  CMakeLists.txt  fill.mlir  positive_sequential.mlir  sequential.mlir
tools/list-mlir-ops/: BUILD.bazel  CMakeLists.txt  list-mlir-ops.cpp
