load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

# Use this to lint bazel files:
# bazel run //:buildifier
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./bazel-*/*",
        "./external/*",
        "./third_party/*",
        "./venv/*",
    ],
    lint_mode = "warn",
    lint_warnings = [],
    mode = "fix",
    visibility = ["//visibility:public"],
)

# Generate compiler_commands.json
refresh_compile_commands(
    name = "refresh_compile_commands",

    # Specify the targets of interest.
    # For example, specify a dict of targets and any flags required to build.
    targets = {
        "//compiler/Target:CoralNPUTarget": "--config=dev",
        "//runtime/driver/registration": "--config=dev",
        "//tools/check_gen": "--config=dev",
        "@iree_core//tools:iree-compile": "--config=dev",
        "@iree_core//tools:iree-run-module": "--config=dev",
        "@iree_core//lib:libIREECompiler.so": "--config=dev",
    },
    # No need to add flags already in .bazelrc. They're automatically picked up.
    # If you don't need flags, a list of targets is also okay, as is a single target string.
    # Wildcard patterns, like //... for everything, *are* allowed here, just like a build.
    # As are additional targets (+) and subtractions (-), like in bazel query https://docs.bazel.build/versions/main/query.html#expressions
    # And if you're working on a header-only library, specify a test or binary target that compiles it.
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.txt",
    requirements_txt = "requirements_lock.txt",
)

# Python formatter
py_console_script_binary(
    name = "yapf",
    pkg = "@pip_deps//yapf",
)
