"""Bazel module configuration for the CoralNPU Compiler."""

module(
    name = "coralnpu-compiler",
    version = "0.0.1",
    compatibility_level = 1,
)

# --- Bazel Module Dependencies ---

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.6.3")  # newer versions don't work well with bazel 7

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

# Required by LLVM (for clang-fuzzer tools)
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")

# LLVM also needs these
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_android", version = "0.6.6")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "zlib-ng", version = "2.0.7", repo_name = "llvm_zlib")
bazel_dep(name = "zstd", version = "1.5.7", repo_name = "llvm_zstd")

# Stack trace support on Linux.
bazel_dep(name = "libbacktrace", version = "1.0.0-20250926-7939218")
bazel_dep(name = "llvm-project-overlay", version = "main")
local_path_override(
    module_name = "llvm-project-overlay",
    path = "third_party/llvm-project/utils/bazel",
)

# For the clangd LSP (generates compile_commands.json)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

coralnpuc_extension = use_extension("//:extensions.bzl", "coralnpuc_extension")
use_repo(
    coralnpuc_extension,
    "llvm-raw",
)

# Use LLVM's extension for third-party dependencies
llvm_repos_ext = use_extension(
    "@llvm-project-overlay//:extensions.bzl",
    "llvm_repos_extension",
)
use_repo(
    llvm_repos_ext,
    # "gmp",
    # "mpc",
    # "mpfr",
    # "nanobind",
    # "pfm",
    # "pybind11",
    # "vulkan_sdk",
)

# Configure LLVM using the llvm-raw repo (creates llvm-project)
llvm_configure = use_repo_rule("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure")

llvm_configure(
    name = "llvm-project",
    targets = [
        "AArch64",
        # "AMDGPU",
        # "ARM",
        # "NVPTX",
        "RISCV",
        # "WebAssembly",
        "X86",
    ],
)

bazel_dep(name = "iree_core", version = "0.0.1")
local_path_override(
    module_name = "iree_core",
    path = "third_party/iree",
)

# Use IREE's extension (won't create llvm-raw since you're the root module)
iree_ext = use_extension(
    "@iree_core//build_tools/bazel:extensions.bzl",
    "iree_extension",
)
iree_ext.location(path = "third_party/iree")
iree_ext.register_plugin(
    plugin_id = "coralnpu",
    # NB: as the library will be used by a different module, we have to use the
    # canonical name here.
    static_library = "@@//compiler:static_registration",
)

inject_repo(iree_ext, "llvm-raw")

use_repo(
    iree_ext,
    # "com_github_dvidelabs_flatcc",
    # "com_google_benchmark",
    # "com_google_googletest",
    # "stablehlo",
    # "hsa_runtime_headers",
    # "iree_cuda",
    # "llvm-raw",
    # "nccl",
    # "spirv_cross",
    # "tracy_client",
    # "vulkan_headers",
    # "webgpu_headers",
    # "iree_external_plugins",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
    # Uncomment to bypass Airlock, or run `gpkg setup` before bazel
    # extra_pip_args = ["--index-url", "https://pypi.org/simple"],
)
use_repo(pip, "pip_deps")

# See https://bazel.build/tutorials/ccp-toolchain-config
register_toolchains(
    "//toolchain:cc_toolchain_for_linux_x86_64",
)

# --- For LSP integration with clangd ---

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
# Recommended by https://clangd.llvm.org/installation and https://bazel.build/install/ide
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
