"""Bazel module configuration for the CoralNPU Compiler."""

module(
    name = "coralnpu-compiler",
    version = "0.0.1",
)

# --- Bazel Module Dependencies ---

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.6.3")  # newer versions don't work well with bazel 7

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

# Required by LLVM (for clang-fuzzer tools)
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")

# LLVM also needs these
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_android", version = "0.6.6")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "zlib-ng", version = "2.0.7", repo_name = "llvm_zlib")
bazel_dep(name = "zstd", version = "1.5.7", repo_name = "llvm_zstd")

# Stack trace support on Linux.
bazel_dep(name = "libbacktrace", version = "1.0.0-20250926-7939218")
bazel_dep(name = "llvm-project-overlay", version = "main")
local_path_override(
    module_name = "llvm-project-overlay",
    path = "third_party/llvm-project/utils/bazel",
)

# For the clangd LSP (generates compile_commands.json)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

coralnpuc_extension = use_extension("//build_tools/bazel:extensions.bzl", "coralnpuc_extension")
use_repo(
    coralnpuc_extension,
    "llvm-raw",
    "rv32_toolchain",
)

# Use LLVM's extension for third-party dependencies
llvm_repos_ext = use_extension(
    "@llvm-project-overlay//:extensions.bzl",
    "llvm_repos_extension",
)
use_repo(
    llvm_repos_ext,
    # "gmp",
    # "mpc",
    # "mpfr",
    "nanobind",
    # "pfm",
    # "pybind11",
    # "vulkan_sdk",
)

inject_repo(llvm_repos_ext, "llvm-raw")

# Configure LLVM using the llvm-raw repo (creates llvm-project)
llvm_configure = use_repo_rule("@llvm-raw//utils/bazel:configure.bzl", "llvm_configure")

llvm_configure(
    name = "llvm-project",
    targets = [
        "AArch64",
        "AMDGPU",
        # "ARM",
        "NVPTX",
        "RISCV",
        # "WebAssembly",
        "X86",
    ],
)

bazel_dep(name = "iree_core", version = "0.0.1")
local_path_override(
    module_name = "iree_core",
    path = "third_party/iree",
)

# Use IREE's extension (won't create llvm-raw since you're the root module)
iree_ext = use_extension(
    "@iree_core//build_tools/bazel:extensions.bzl",
    "iree_extension",
)
iree_ext.location(path = "third_party/iree")
iree_ext.register_plugin(
    plugin_id = "coralnpu",
    target = "//compiler/Target:CoralNPUTarget",
)
iree_ext.register_driver(
    driver_name = "coralnpu",
    register_fn = "iree_hal_coralnpu_driver_module_register",
    target = "//runtime/driver/registration",
)

inject_repo(iree_ext, "llvm-raw")

override_repo(
    iree_ext,
    pip = "pip_deps",
)

use_repo(
    iree_ext,
    # "com_github_dvidelabs_flatcc",
    # "com_google_benchmark",
    # "com_google_googletest",
    "stablehlo",
    # "hsa_runtime_headers",
    # "iree_cuda",
    # "llvm-raw",
    # "nccl",
    # "spirv_cross",
    # "tracy_client",
    # "vulkan_headers",
    # "webgpu_headers",
    # "iree_external_plugins",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
    # Uncomment to bypass Airlock, or run `gpkg setup` before bazel
    # extra_pip_args = ["--index-url", "https://pypi.org/simple"],
)
use_repo(pip, "pip_deps")

# --- For LSP integration with clangd ---

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
# Recommended by https://clangd.llvm.org/installation and https://bazel.build/install/ide
git_override(
    module_name = "hedron_compile_commands",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

# --- CoralNPU Hardware Submodule ---
bazel_dep(name = "coralnpu_hw", version = "0.0.1")
local_path_override(
    module_name = "coralnpu_hw",
    path = "third_party/coralnpu",
)

# rules_hdl with patches from submodule
bazel_dep(name = "rules_hdl", version = "0.0.1")
archive_override(
    module_name = "rules_hdl",
    patch_cmds = [
        "echo 'module(name = \"rules_hdl\", version = \"0.0.1\")' > MODULE.bazel",
        "echo 'bazel_dep(name = \"rules_cc\", version = \"0.2.14\")' >> MODULE.bazel",
        "echo 'bazel_dep(name = \"rules_python\", version = \"1.6.3\")' >> MODULE.bazel",
        "echo 'bazel_dep(name = \"bazel_skylib\", version = \"1.8.2\")' >> MODULE.bazel",
        "echo 'bazel_dep(name = \"rules_proto\", version = \"7.1.0\")' >> MODULE.bazel",
        "echo 'bazel_dep(name = \"rules_pkg\", version = \"1.2.0\")' >> MODULE.bazel",
        "echo 'bazel_dep(name = \"rules_license\", version = \"0.0.7\")' >> MODULE.bazel",
        "echo 'bazel_dep(name = \"rules_foreign_cc\", version = \"0.15.1\")' >> MODULE.bazel",
        "echo 'bazel_dep(name = \"platforms\", version = \"0.0.10\")' >> MODULE.bazel",
        "echo 'rules_hdl_deps = use_extension(\"//:extensions.bzl\", \"rules_hdl_deps\")' >> MODULE.bazel",
        "echo 'use_repo(rules_hdl_deps, \"verilator\", \"net_zlib\", \"accellera_systemc\", \"com_github_westes_flex\", \"org_gnu_m4\", \"org_gnu_bison\")' >> MODULE.bazel",
        "mkdir -p third_party/systemc",
        "touch third_party/systemc/BUILD",
        "echo 'load(\"@rules_foreign_cc//foreign_cc:defs.bzl\", \"cmake\")' > third_party/systemc/systemc.BUILD",
        "echo 'filegroup(name = \"all_srcs\", srcs = glob([\"**\"]))' >> third_party/systemc/systemc.BUILD",
        "echo 'cmake(' >> third_party/systemc/systemc.BUILD",
        "echo '    name = \"systemc\",' >> third_party/systemc/systemc.BUILD",
        "echo '    cache_entries = {' >> third_party/systemc/systemc.BUILD",
        "echo '        \"CMAKE_POSITION_INDEPENDENT_CODE\": \"ON\",' >> third_party/systemc/systemc.BUILD",
        "echo '        \"CMAKE_CXX_STANDARD\": \"17\",' >> third_party/systemc/systemc.BUILD",
        "echo '        \"BUILD_SHARED_LIBS\": \"False\",' >> third_party/systemc/systemc.BUILD",
        "echo '        \"CMAKE_INSTALL_LIBDIR\": \"lib\",' >> third_party/systemc/systemc.BUILD",
        "echo '        \"CMAKE_CXX_FLAGS\": \"-Wno-implicit-fallthrough -Wno-error\",' >> third_party/systemc/systemc.BUILD",
        "echo '    },' >> third_party/systemc/systemc.BUILD",
        "echo '    generate_args = [\"-G Ninja\"],' >> third_party/systemc/systemc.BUILD",
        "echo '    install = True,' >> third_party/systemc/systemc.BUILD",
        "echo '    lib_source = \":all_srcs\",' >> third_party/systemc/systemc.BUILD",
        "echo '    out_static_libs = [\"libsystemc.a\"],' >> third_party/systemc/systemc.BUILD",
        "echo '    targets = [\"systemc\"],' >> third_party/systemc/systemc.BUILD",
        "echo '    visibility = [\"//visibility:public\"],' >> third_party/systemc/systemc.BUILD",
        "echo ')' >> third_party/systemc/systemc.BUILD",
        "echo 'load(\"@bazel_tools//tools/build_defs/repo:http.bzl\", \"http_archive\")' > extensions.bzl",
        "echo 'load(\"//dependency_support:dependency_support.bzl\", \"dependency_support\")' >> extensions.bzl",
        "echo 'def _rules_hdl_deps_impl(ctx):' >> extensions.bzl",
        "echo '    dependency_support(register_toolchains = False)' >> extensions.bzl",
        "echo '    http_archive(' >> extensions.bzl",
        "echo '        name = \"accellera_systemc\",' >> extensions.bzl",
        "echo '        build_file = \"@rules_hdl//third_party/systemc:systemc.BUILD\",' >> extensions.bzl",
        "echo '        sha256 = \"bfb309485a8ad35a08ee78827d1647a451ec5455767b25136e74522a6f41e0ea\",' >> extensions.bzl",
        "echo '        strip_prefix = \"systemc-2.3.4\",' >> extensions.bzl",
        "echo '        urls = [\"https://github.com/accellera-official/systemc/archive/refs/tags/2.3.4.tar.gz\"],' >> extensions.bzl",
        "echo '    )' >> extensions.bzl",
        "echo 'rules_hdl_deps = module_extension(implementation = _rules_hdl_deps_impl)' >> extensions.bzl",
    ],
    patch_strip = 1,
    patches = [
        "//third_party/coralnpu/third_party/rules_hdl:0001-Use-systemc-in-verilator-and-support-verilator-in-co.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0002-Update-cocotb-script-to-support-newer-version.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0003-Export-vdb-via-undeclared-test-outputs.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0004-More-jobs-for-cocotb.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0005-Use-num_failed-for-exit-code.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0006-Separate-build-from-test-for-Verilator.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0007-Suppress-skywater-pdk-loading.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0008-Use-glob-for-verilator_bin-data-files.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0009-Suppress-Verilator-C-warnings.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0010-Fix-ParseDict-to-handle-space-separated-lists.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0011-Support-location-expansion-in-build-args.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0012-Fix-runfiles-collection-for-direct-files.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0013-Support-pre-compiled-VCS-models.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0014-Remove-deprecated-path-attr-from-bison-filegroup.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0015-Use-short_path-for-python-runfiles-resolution.patch",
        "//third_party/coralnpu/third_party/rules_hdl:0016-Add-V3AstNodeStmt-and-V3Dfg-gen-clone-cases-to-verilator.patch",
    ],
    sha256 = "1b560fe7d4100486784d6f2329e82a63dd37301e185ba77d0fd69b3ecc299649",
    strip_prefix = "bazel_rules_hdl-7a1ba0e8d229200b4628e8a676917fc6b8e165d1",
    urls = ["https://github.com/hdl/bazel_rules_hdl/archive/7a1ba0e8d229200b4628e8a676917fc6b8e165d1.tar.gz"],
)

register_toolchains("@rules_hdl//verilator:verilator_toolchain")

# Configure rules_scala globally
bazel_dep(name = "rules_scala", version = "7.2.6", repo_name = "io_bazel_rules_scala")

scala_config = use_extension("@io_bazel_rules_scala//scala/extensions:config.bzl", "scala_config")
scala_config.settings(
    scala_version = "2.13.18",
)

scala_deps = use_extension("@io_bazel_rules_scala//scala/extensions:deps.bzl", "scala_deps")
scala_deps.scala()
