load("@iree_core//build_tools/bazel:build_defs.oss.bzl", "iree_compiler_register_plugin")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
    features = ["layering_check"],
    licenses = ["notice"],  # Apache 2.0
)

cc_library(
    name = "registration",
    srcs = [
        "PluginRegistration.cpp",
    ],
    deps = [
        "//compiler/Pipelines",
        "@iree_core//compiler/src/iree/compiler/Dialect/HAL/Target",
        "@iree_core//compiler/src/iree/compiler/PluginAPI",
        "@llvm-project//mlir:IR",
    ],
)

# NB: This does not do anything (it's implementation is `pass`)! The actual
# registration is done in //MODULE.bazel (iree_ext.register_plugin).
iree_compiler_register_plugin(
    # this must match the suffix (the *) of the `extern "C" bool
    # iree_register_compiler_plugin_*` function
    plugin_id = "coralnpu",
    target = ":registration",
)
